# preconditioned-npe-under-misspecification

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/gnk/: method_matrix.sh
configs/svar/: method_matrix.sh
experiments/: run_npe_rs (old weibull).sh  run_pnpe_rs (old weibull).sh
experiments/alpha_sv/: run_npe.sh  run_npe_rs.sh  run_pnpe.sh  run_pnpe_rs.sh  run_prnpe.sh  run_rnpe.sh
experiments/bvcbm/: run_npe.sh  run_pnpe.sh  run_prnpe.sh  run_rf_abc_npe.sh  run_rf_abc_rnpe.sh  (+1 more)
jobs/: alpha_sv_npe_rs.pbs  alpha_sv_pnpe_rs.pbs  bvcbm_ppd_worker.pbs  bvcbm_worker.pbs  gnk_backfill_and_collate.pbs  gnk_coverage_worker.pbs  gnk_worker.pbs  submit_alpha_sv_mmd_sweep.sh  submit_bvcbm.sh  svar_pnpe_rs_gpu.pbs  svar_worker.pbs  weibull_worker.pbs
notebooks/: alpha_sv_playground.ipynb  alpha_sv_plots.ipynb  bvcbm_playground.ipynb  bvcbm_ppc_plots_p0.ipynb  bvcbm_ppc_plots_p1.ipynb  bvcbm_ppc_plots_p2.ipynb  bvcbm_ppc_plots_p3.ipynb  contaminated_weibull_playground.ipynb  contaminated_weibull_plots.ipynb  gnk_playground.ipynb  playground.ipynb  save_alpha_sv_data.ipynb  sv_playground.ipynb  svar_playground.ipynb  svar_plots.ipynb
scripts/: aggregate_metrics.py  aggregate_svar_metrics.py  backfill_and_collate.py  collate_gnk_coverage.py  generate_gnk_coverage_table.sh  host_only_bvcbm_pool_check.py  launch_gnk_array.sh  launch_svar_array.sh  launch_weibull_array.sh  ppd_from_posterior.py  quick_bvcbm_parallel_check.py  quick_smcabc_parallel_check.py  submit_ppd_all.sh
tests/: smoke_test_prnpe.py  test_tumourmodel_integration.py
(+77 files in other folders)
