[project]
name = "precond_npe_misspec"
version = "0.1.0"
description = "TODO: ADD DESCRIPTION"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "equinox>=0.13.0",
    "flowjax>=17.2.0",
    "jax>=0.7.1",
    "matplotlib>=3.10.6",
    "numpyro>=0.19.0",
    "pandas>=2.3.2",
    "tyro>=0.9.28",
    "yfinance>=0.2.65",
    "blackjax",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["F401"]        # re-exports allowed

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disable_error_code = ["import-untyped"]  # hide the note about missing stubs

[[tool.mypy.overrides]]
module = ["numpyro", "numpyro.*"]
ignore_missing_imports = true

[tool.uv.sources]
# HTTPS:
blackjax = { git = "https://github.com/RyanJafefKelly/blackjax", branch = "smc_abc" }
